atualização do texto

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Code Mawari</title>
 </head>
+
 <body>
-<h1>Header</h1>
-<h2>hello World</h2>
+	<h1>Email do cliente</h1>
+	<h2>Cliente</h2>
 </body>
+
 </html>
